Add ecg signal visualization

--- a/analysis/analysis_notebook.ipynb
+++ b/analysis/analysis_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "30a3799e",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
    "id": "6c79d6a7",
    "metadata": {},
    "source": [
-    "Load Features from CSV"
+    "### Load Features from CSV"
    ]
   },
   {
@@ -77,6 +77,15 @@
     "all_feature_array = all_feature_array.drop([\"index\"], axis=1)\n",
     "feature_names = all_feature_array.columns\n",
     "print(all_feature_array.shape, len(feature_names), len(label_list))\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ad50be66",
+   "metadata": {},
+   "source": [
+    "### Load raw data "
    ]
   },
   {
