--- a/analysis/clustering_visualization.ipynb
+++ b/analysis/clustering_visualization.ipynb
@@ -15,29 +15,15 @@
     "    load_data_from_csv,\n",
     "    get_filtered_data,\n",
     ")\n",
+    "from constants import SORTED_BLOCK_NAMES, AUDIO_BLOCKS\n",
     "\n",
     "# sklearn imports\n",
     "from sklearn.decomposition import PCA  # Principal Component Analysis\n",
-    "from sklearn.manifold import TSNE  # T-Distributed Stochastic Neighbor Embedding\n",
     "\n",
     "# plotly imports\n",
     "import plotly.graph_objs as go\n",
     "from plotly.offline import init_notebook_mode\n",
     "\n",
-    "SORTED_BLOCK_NAMES = [\n",
-    "    \"audio_hvha\",\n",
-    "    \"audio_hvla\",\n",
-    "    \"audio_nvha\",\n",
-    "    \"audio_nvla\",\n",
-    "    \"breath_hvha\",\n",
-    "    \"breath_hvla\",\n",
-    "    \"breath_nvha\",\n",
-    "    \"breath_nvla\",\n",
-    "    \"meditation\",\n",
-    "    \"mind wandering\",\n",
-    "]\n",
-    "\n",
-    "AUDIO_BLOCKS = [\"audio_hvha\", \"audio_hvla\", \"audio_nvha\", \"audio_nvla\"]\n",
     "\n",
     "FOUR_CONDITIONS = [\"audio\"] * 4 + [\"breath\"] * 4 + [\"meditation\", \"wandering\"]\n",
     "VALENCE_CONDITIONS = (\n",
@@ -52,15 +38,21 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ee9ab8c0",
+   "metadata": {},
+   "source": [
+    "### Load features from CSV"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ac22c46f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "    load features from csv\n",
-    "\"\"\"\n",
     "dir_name = \"eeg_features2\"\n",
     "result = load_data_from_csv(dir_name)"
    ]
@@ -247,6 +239,7 @@
     "    all_blocks: list,\n",
     "    n_components: int,\n",
     "    to_save: bool = False,\n",
+    "    is_user_rating: bool = False,\n",
     "):\n",
     "    normalized_eeg_features, _ = get_processed_feature(band, channel, result, [subject])\n",
     "    pca = PCA(n_components=n_components)\n",
@@ -263,7 +256,7 @@
     "        labels=labels,\n",
     "        dimensions=range(len(labels)),\n",
     "        color=all_blocks,\n",
-    "        color_discrete_map=V_COLOR_MAP,\n",
+    "        color_discrete_map=V_COLOR_MAP if is_user_rating else COLOR_MAP,\n",
     "        opacity=0.6,\n",
     "        title=f\"{identifier} Total Explained Variance: {total_var:.2f}%\",\n",
     "    )\n",
@@ -363,7 +356,7 @@
    "id": "aea0d45f",
    "metadata": {},
    "source": [
-    "#### Update True label as user rating (Optional)"
+    "#### (Optional) Update True label as user rating "
    ]
   },
   {
@@ -406,15 +399,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name_to_batch = [\n",
-    "    [2000, 2001, 2002, 2003, 2004, 2005],\n",
-    "    [2017, 2018, 2020, 2024, 2025, 2026],\n",
-    "    [2028, 2029, 2031, 2032, 2033, 2035], \n",
-    "    [2036, 2039, 2040, 2041, 2042, 2043],\n",
-    "]\n",
+    "from constants import SUEJECT_BATCHES\n",
     "\n",
     "# Attach the block conditions\n",
-    "subjects = name_to_batch[3]\n",
+    "subjects = SUEJECT_BATCHES[0]\n",
     "audio_only_subjects = audio_only[audio_only.Subject.isin(subjects)]\n",
     "audio_only_subjects.shape"
    ]
@@ -457,21 +445,58 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "492afd1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ipywidgets as widgets\n",
+    "\n",
+    "channel = widgets.Dropdown(\n",
+    "    options=[\"A\", \"B\", \"C\", \"D\"],\n",
+    "    value='A',\n",
+    "    description='Channel:',\n",
+    "    disabled=False,\n",
+    ")\n",
+    "channel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "072b2f55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "band = widgets.Dropdown(\n",
+    "    options=[\"DELTA\", \"THETA\", \"ALPHA\", \"BETA1\", \"BETA2\", \"GAMMA\"],\n",
+    "    value='DELTA',\n",
+    "    description='Spectral:',\n",
+    "    disabled=False,\n",
+    ")\n",
+    "band"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "801ca2c5",
    "metadata": {},
    "outputs": [],
    "source": [
     "n_components = 6\n",
-    "for s in subjects:\n",
-    "    conditions = audio_only[audio_only[\"Subject\"] == s][\"condition\"]\n",
+    "is_user_rating = True\n",
+    "\n",
+    "for s in subjects: #\n",
+    "    conditions = audio_only_subjects[audio_only_subjects[\"Subject\"] == s][\"condition\"]\n",
     "    show_pca_matrix(\n",
-    "        \"THETA\",\n",
-    "        \"C\",\n",
+    "        band.value,\n",
+    "        channel.value,\n",
     "        s,\n",
-    "        audio_only.drop(\"condition\", axis=1),\n",
+    "        audio_only_subjects.drop(\"condition\", axis=1),\n",
     "        conditions,\n",
     "        n_components,\n",
     "        False,\n",
+    "        is_user_rating,\n",
     "    )\n"
    ]
   },
@@ -493,7 +518,7 @@
    "source": [
     "subject_to_heatmap = {}\n",
     "for s in subjects:\n",
-    "    subject_to_heatmap[s] = get_clustering_result(audio_only, s, 6, do_kmeans, rand_score)"
+    "    subject_to_heatmap[s] = get_clustering_result(audio_only_subjects, s, 6, do_kmeans, rand_score)"
    ]
   },
   {
@@ -508,14 +533,14 @@
     "\n",
     "\n",
     "fig, axes = plt.subplots(3, 2, sharex=True, sharey=True, figsize=(14, 10))\n",
-    "fig.suptitle('Rand index scroe of Kmeans Clustering with audio only blocks (user rating)')\n",
+    "fig.suptitle('Rand index scroe of Kmeans Clustering with audio only blocks')\n",
     "for s, ax in zip(subject_to_heatmap.keys(), axes.flatten()):\n",
     "    ax.set_title(s)\n",
     "    sns.heatmap(subject_to_heatmap[s], annot=True, fmt=\".3f\", linewidths=0.5, ax=ax, cmap=\"crest\")\n",
     "    \n",
     "\n",
     "identifier = \",\".join(str(s) for s in subjects)\n",
-    "filename = f\"results/{identifier}_user_rating_rand_index_kmeans_audio_blocks.png\"\n",
+    "filename = f\"results/{identifier}_rand_index_kmeans_audio_blocks.png\"\n",
     "fig.show()\n",
     "plt.savefig(filename)"
    ]
