--- a/analysis/signal_visualization.ipynb
+++ b/analysis/signal_visualization.ipynb
@@ -7,10 +7,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "Reference: https://raphaelvallat.com/bandpower.html\n",
-    "\"\"\"\n",
-    "\n",
     "from scipy import signal\n",
     "from scipy.integrate import simps\n",
     "\n",
@@ -31,6 +27,10 @@
     "from feature_extraction import (\n",
     "    Feature,\n",
     "    EEG_BANDS,\n",
+    ")\n",
+    "\n",
+    "from biomarkers import (\n",
+    "    ALL_MARKERS\n",
     ")"
    ]
   },
@@ -40,7 +40,7 @@
    "id": "7cbae2a5",
    "metadata": {},
    "source": [
-    "## Constant"
+    "### Constant"
    ]
   },
   {
@@ -50,14 +50,106 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from constants import SUEJECT_BATCHES, SORTED_BLOCK_NAMES, ALL_EEG_BANDS, AUDIO_BLOCKS\n",
+    "\n",
+    "\n",
     "# All constants\n",
     "DIR_NAME = \"../CleandDataV2/2031\"\n",
     "BLOCK_NAME = \"audio_hvla\"\n",
-    "MARKER = \"EEG\"\n",
-    "CHANNEL = 50\n",
+    "CHANNEL = 0\n",
     "EPOCH = 0\n",
     "BAND = Feature.DELTA\n",
-    "SUBJECTS_LIST = [2028, 2029, 2031, 2032, 2033, 2035]"
+    "SUBJECTS_LIST = SUEJECT_BATCHES[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b0834a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ipywidgets as widgets\n",
+    "\n",
+    "MARKER = widgets.Dropdown(\n",
+    "    options=ALL_MARKERS,\n",
+    "    value=ALL_MARKERS[0],\n",
+    "    description='Marker:',\n",
+    "    disabled=False,\n",
+    ")\n",
+    "MARKER"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "6f043a17",
+   "metadata": {},
+   "source": [
+    "### Load raw data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b64ba67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subj_to_data = {}\n",
+    "data_dir = '../CleandDataV2/'\n",
+    "for subj in SUBJECTS_LIST:\n",
+    "    dir_name = data_dir + str(subj)\n",
+    "    all_data = load_data_from_dir(dir_name)\n",
+    "    subj_to_data[subj] = all_data\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "f94bff85",
+   "metadata": {},
+   "source": [
+    "### Load features from csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ca5430b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir_name = \"eeg_features2\"\n",
+    "result = load_data_from_csv(dir_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a1461d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subjects = result['Subject'].unique()\n",
+    "\n",
+    "all_blocks = []\n",
+    "for b in SORTED_BLOCK_NAMES:\n",
+    "    all_blocks.extend([b] * 13)\n",
+    "\n",
+    "\n",
+    "result[\"condition\"] = all_blocks * len(subjects)\n",
+    "mask = result[\"condition\"].isin(AUDIO_BLOCKS)\n",
+    "audio_only = result[mask]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "318492c6",
+   "metadata": {},
+   "source": [
+    "### Plot eeg topography averaged trials"
    ]
   },
   {
@@ -117,53 +209,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ca5430b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dir_name = \"eeg_features2\"\n",
-    "result = load_data_from_csv(dir_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3a1461d7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "    load features from csv\n",
-    "\"\"\"\n",
-    "SORTED_BLOCK_NAMES = [\n",
-    "    \"audio_hvha\",\n",
-    "    \"audio_hvla\",\n",
-    "    \"audio_nvha\",\n",
-    "    \"audio_nvla\",\n",
-    "    \"breath_hvha\",\n",
-    "    \"breath_hvla\",\n",
-    "    \"breath_nvha\",\n",
-    "    \"breath_nvla\",\n",
-    "    \"meditation\",\n",
-    "    \"mind wandering\",\n",
-    "]\n",
-    "\n",
-    "\n",
-    "subjects = result['Subject'].unique()\n",
-    "\n",
-    "all_blocks = []\n",
-    "for b in SORTED_BLOCK_NAMES:\n",
-    "    all_blocks.extend([b] * 13)\n",
-    "\n",
-    "\n",
-    "result[\"condition\"] = all_blocks * len(subjects)\n",
-    "mask = result[\"condition\"].isin([\"audio_hvha\", \"audio_hvla\", \"audio_nvha\", \"audio_nvla\"])\n",
-    "audio_only = result[mask]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "ee6648ad",
    "metadata": {},
    "outputs": [],
@@ -178,7 +223,7 @@
     "            figsize=(35, 20),\n",
     "            gridspec_kw={\"width_ratios\": [3, 3, 3, 3, 1]},\n",
     "        )\n",
-    "    all_bands = [\"DELTA\", \"THETA\", \"ALPHA\", \"BETA1\", \"BETA2\", \"GAMMA\"]\n",
+    "    all_bands = ALL_EEG_BANDS\n",
     "    xlables = list(pd.unique(all_feature_array.condition))\n",
     "\n",
     "    for idx in range(len(all_bands)):\n",
@@ -187,24 +232,18 @@
     "        data = np.swapaxes(data.to_numpy(), 0, -1)\n",
     "        axes[idx,:] = plot_eeg_topomap(data, xlables, axes[idx,:], 13, band, [])\n",
     "\n",
-    "    fig.suptitle(f\"{subj} EEG spectral data averaged over trials\", fontsize=35)\n",
+    "    fig.suptitle(f\"{subj} {MARKER} data averaged over trials\", fontsize=35)\n",
     "    filename = f\"results/topomap/eeg_spectral_topography_{subj}.png\"\n",
     "    plt.savefig(filename)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3b64ba67",
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "b5fbc1f8",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "subj_to_data = {}\n",
-    "data_dir = '../CleandDataV2/'\n",
-    "for subj in SUBJECTS_LIST:\n",
-    "    dir_name = data_dir + subj\n",
-    "    all_data = load_data_from_dir(dir_name)\n",
-    "    subj_to_data[subj] = all_data\n"
+    "### Plot eeg topography over time"
    ]
   },
   {
@@ -214,12 +253,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_blocks_name = []\n",
-    "for b in sorted(all_data.keys()):\n",
-    "    if not b.startswith(\"audio\"):\n",
-    "        continue\n",
-    "\n",
-    "    all_blocks_name.append(b)\n",
+    "all_blocks_name = AUDIO_BLOCKS\n",
     "\n",
     "for subj in SUBJECTS_LIST:\n",
     "    all_data = subj_to_data[subj]\n",
@@ -245,42 +279,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f86506ba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_blocks = []\n",
-    "all_blocks_name = []\n",
-    "for b in sorted(all_data.keys()):\n",
-    "    if not b.startswith(\"audio\"):\n",
-    "        continue\n",
-    "\n",
-    "    all_blocks_name.append(b)\n",
-    "    average_eeg_data = np.mean(all_data[b].get_all_data()[MARKER], axis=2)\n",
-    "    average_eeg_data = np.mean(average_eeg_data, axis=1)\n",
-    "    if len(all_blocks) == 0:\n",
-    "        all_blocks = average_eeg_data\n",
-    "    else:\n",
-    "        all_blocks = np.vstack((all_blocks, average_eeg_data))\n",
-    "\n",
-    "# (num_blocks, num_channel) => (num_channel, num_blocks)\n",
-    "all_blocks = np.swapaxes(all_blocks, 0, -1)\n",
-    "\n",
-    "fig, axes = plt.subplots(\n",
-    "    1,\n",
-    "    5,\n",
-    "    figsize=(15, 5),\n",
-    "    gridspec_kw={\"width_ratios\": [3, 3, 3, 3, 1]},\n",
-    ")\n",
-    "\n",
-    "plot_eeg_topomap(all_blocks, all_blocks_name, axes, 13, \"mV\", [])\n",
-    "fig.suptitle(\"2031 EEG raw\")\n",
-    "plt.show()"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "d0a2bf35",
@@ -292,33 +290,88 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6b734c1e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "653d625f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "marker = MARKER.value\n",
+    "\n",
+    "channels = all_data[BLOCK_NAME].get_chanlocs(marker)\n",
+    "options = [(channels[idx], idx) for idx in range(len(channels))]\n",
+    "sf = all_data[BLOCK_NAME].marker_to_data[marker]['srate'].item()[0][0]\n",
+    "\n",
+    "feature = widgets.Dropdown(\n",
+    "    options=options,\n",
+    "    value=0,\n",
+    "    description='Feature:',\n",
+    "     disabled=False,\n",
+    ")\n",
+    "feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "787da7fe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# retrieve the data from marker's channel 1\n",
-    "data = all_data[BLOCK_NAME].get_all_data()[MARKER][CHANNEL]\n",
-    "# (num_data_points, num_epochs) => (num_epochs, num_data_points)\n",
-    "data = np.swapaxes(data, 0, 1)\n",
-    "# get first epoch\n",
-    "data = data[2]\n",
+    "num_epochs = 13\n",
     "\n",
-    "channels = all_data[BLOCK_NAME].get_chanlocs(MARKER)\n",
+    "for subj, subject_data in subj_to_data.items():\n",
+    "    fig, axes = plt.subplots(nrows=len(AUDIO_BLOCKS), ncols=num_epochs, figsize=(num_epochs*5, len(AUDIO_BLOCKS)*5), sharey=True, sharex=True)\n",
     "\n",
-    "sns.set(font_scale=1.2)\n",
+    "    for idx, ax in enumerate(axes.flat):\n",
+    "        epoch = idx%num_epochs\n",
+    "        block = AUDIO_BLOCKS[int(idx/num_epochs)]\n",
     "\n",
-    "# Define sampling frequency and time vector\n",
-    "sf = 512.0\n",
-    "time = all_data[BLOCK_NAME].get_times(MARKER) / 1000\n",
+    "        data = subject_data[block].get_all_data()[marker][feature.value]\n",
+    "        time = subject_data[block].get_times(marker) /1000\n",
+    "        # (num_data_points, num_epochs) => (num_epochs, num_data_points)\n",
+    "        data = np.swapaxes(data, 0, 1)\n",
+    "        ax.plot(time, data[epoch], color=\"k\")\n",
+    "        ax.set_title(f'Trial {epoch+1}', fontdict={'fontsize': 20, 'fontweight': 20, 'color': 'blue'})\n",
+    "        ax.set_xlabel('Time (seconds)', fontsize=15, weight=20)\n",
+    "        ax.set_ylabel(f'{block}  mV', fontsize=20, color='red')\n",
     "\n",
-    "# Plot the signal\n",
-    "fig, ax = plt.subplots(1, 1, figsize=(12, 4))\n",
-    "plt.plot(time, data, lw=1.5, color=\"k\")\n",
-    "plt.xlabel(\"Time (seconds)\")\n",
-    "plt.ylabel(\"Voltage\")\n",
-    "plt.xlim([time.min(), time.max()])\n",
-    "plt.title(f\"M&M {BLOCK_NAME} EEG data {channels[CHANNEL]}\")\n",
-    "sns.despine()"
+    "    fig.suptitle(f'Subject {subj}:{marker} - {channels[feature.value]}', fontsize='xx-large')\n",
+    "    plt.savefig(f\"results/{marker}_{subj}_{channels[feature.value]}_time_series.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7cabfb4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# (TODO) change to dataframe and use seaborn to plot all time series data\n",
+    "\n",
+    "# time_series_data = {}\n",
+    "\n",
+    "# for b in AUDIO_BLOCKS:\n",
+    "#     data = all_data[b].get_all_data()[marker][feature.value]\n",
+    "#     time = all_data[b].get_times(marker) /1000\n",
+    "#     # (num_data_points, num_epochs) => (num_epochs, num_data_points)\n",
+    "#     data = np.swapaxes(data, 0, 1)    \n",
+    "#     time_series_data[b]['Time (seconds)'] = len(time)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "227125e4",
+   "metadata": {},
+   "source": [
+    "### Plot frequency bandpower - EEG"
    ]
   },
   {
@@ -328,6 +381,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "Reference: https://raphaelvallat.com/bandpower.html\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
     "# Define window length (4 seconds)\n",
     "win = 4 * sf\n",
     "freqs, psd = signal.welch(data, sf, nperseg=win)\n",
