--- a/analysis/signal_visualization.ipynb
+++ b/analysis/signal_visualization.ipynb
@@ -290,23 +290,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b734c1e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "653d625f",
    "metadata": {},
    "outputs": [],
    "source": [
     "marker = MARKER.value\n",
     "\n",
-    "channels = all_data[BLOCK_NAME].get_chanlocs(marker)\n",
+    "oneblock_data = all_data[BLOCK_NAME]\n",
+    "\n",
+    "channels = oneblock_data.get_chanlocs(marker)\n",
     "options = [(channels[idx], idx) for idx in range(len(channels))]\n",
-    "sf = all_data[BLOCK_NAME].marker_to_data[marker]['srate'].item()[0][0]\n",
+    "sf = oneblock_data.marker_to_data[marker]['srate'].item()[0][0]\n",
     "\n",
     "feature = widgets.Dropdown(\n",
     "    options=options,\n",
@@ -315,6 +309,112 @@
     "     disabled=False,\n",
     ")\n",
     "feature"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "21d3feb0",
+   "metadata": {},
+   "source": [
+    "### Plot ECG and TREV time series in audio blocks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "550f04b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "channels = oneblock_data.get_chanlocs('TREV')\n",
+    "options = [(channels[idx], idx) for idx in range(len(channels))]\n",
+    "sf = oneblock_data.marker_to_data['TREV']['srate'].item()[0][0]\n",
+    "print(options, sf, oneblock_data.marker_to_data[marker]['srate'].item()[0][0])\n",
+    "\n",
+    "trev_channel = widgets.Dropdown(\n",
+    "    options=options,\n",
+    "    value=0,\n",
+    "    description='Feature:',\n",
+    "     disabled=False,\n",
+    ")\n",
+    "trev_channel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f99d06a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_epochs = 13\n",
+    "\n",
+    "row_metadata = [\n",
+    "    {\"marker\": \"ECG\", \"chan\": 3, \"feature\": \"mV\"},\n",
+    "    {\"marker\": \"ECG\", \"chan\": 2, \"feature\": \"LF/HF\"},\n",
+    "    {\"marker\": \"TREV\", \"chan\": 0, \"feature\": \"ohms/sec\"},\n",
+    "    {\"marker\": \"EOG\", \"chan\": 0, \"feature\": \"uV\"},\n",
+    "]\n",
+    "\n",
+    "\n",
+    "def configure_ax(ax, epoch, y_label):\n",
+    "    ax.set_title(\n",
+    "        f\"Trial {epoch+1}\",\n",
+    "        fontdict={\"fontsize\": 15, \"fontweight\": 20, \"color\": \"blue\"},\n",
+    "    )\n",
+    "    ax.set_xlabel(\"Time (seconds)\", fontsize=15, weight=20)\n",
+    "    ax.yaxis.set_tick_params(labelsize=15)\n",
+    "    if epoch == 0:\n",
+    "        ax.set_ylabel(\n",
+    "            y_label,\n",
+    "            fontsize=30,\n",
+    "            color=\"red\",\n",
+    "        )\n",
+    "    return ax\n",
+    "\n",
+    "\n",
+    "for subj, subject_data in subj_to_data.items():\n",
+    "    n_rows = len(row_metadata)*2\n",
+    "    fig, axes = plt.subplots(\n",
+    "        nrows=n_rows,\n",
+    "        ncols=num_epochs,\n",
+    "        figsize=(num_epochs * 5, n_rows * 5),\n",
+    "        sharey=\"row\",\n",
+    "        sharex=True,\n",
+    "    )\n",
+    "    \n",
+    "    for idx, ax in enumerate(axes.flat):\n",
+    "        epoch = idx % num_epochs\n",
+    "        row_no = int(idx / num_epochs) % len(row_metadata)\n",
+    "        block_no = int(int(idx / num_epochs) / len(row_metadata))\n",
+    "        block = AUDIO_BLOCKS[block_no]\n",
+    "\n",
+    "        marker = row_metadata[row_no][\"marker\"]\n",
+    "        chan = row_metadata[row_no][\"chan\"]\n",
+    "\n",
+    "        data = subject_data[block].get_all_data()[marker][chan]\n",
+    "        time = subject_data[block].get_times(marker) / 1000\n",
+    "        # (num_data_points, num_epochs) => (num_epochs, num_data_points)\n",
+    "        data = np.swapaxes(data, 0, 1)\n",
+    "        ax.plot(time, data[epoch], color=\"k\")\n",
+    "        ax = configure_ax(ax, epoch, f\"{block.lstrip('audio_')} {row_metadata[row_no]['feature']}\")\n",
+    "\n",
+    "    fig.suptitle(\n",
+    "        f\"Subject {subj}: ECG, TREV Blood Velocity and EOG in audio condition\",\n",
+    "        fontsize=30,\n",
+    "    )\n",
+    "\n",
+    "    plt.savefig(f\"results/ecg,trev,eog_{subj}_time_series.png\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "2afc04a6",
+   "metadata": {},
+   "source": [
+    "### Plot ECG time series in audio blocks"
    ]
   },
   {
@@ -338,12 +438,10 @@
     "        # (num_data_points, num_epochs) => (num_epochs, num_data_points)\n",
     "        data = np.swapaxes(data, 0, 1)\n",
     "        ax.plot(time, data[epoch], color=\"k\")\n",
-    "        ax.set_title(f'Trial {epoch+1}', fontdict={'fontsize': 20, 'fontweight': 20, 'color': 'blue'})\n",
-    "        ax.set_xlabel('Time (seconds)', fontsize=15, weight=20)\n",
-    "        ax.set_ylabel(f'{block}  mV', fontsize=20, color='red')\n",
+    "        ax = configure_ax(ax, epoch, f'{block}  mV')\n",
     "\n",
-    "    fig.suptitle(f'Subject {subj}:{marker} - {channels[feature.value]}', fontsize='xx-large')\n",
-    "    plt.savefig(f\"results/{marker}_{subj}_{channels[feature.value]}_time_series.png\")"
+    "    fig.suptitle(f'Subject {subj}:{marker} - {channels[feature.value]}', fontsize=30)\n",
+    "    #plt.savefig(f\"results/{marker}_{subj}_{channels[feature.value]}_time_series.png\")"
    ]
   },
   {
