Add beahvior analysis and add crebra library

--- a/analysis/clustering_visualization.ipynb
+++ b/analysis/clustering_visualization.ipynb
@@ -15,7 +15,7 @@
     "    load_data_from_csv,\n",
     "    get_filtered_data,\n",
     ")\n",
-    "from constants import SORTED_BLOCK_NAMES, AUDIO_BLOCKS\n",
+    "from constants import SORTED_BLOCK_NAMES, AUDIO_BLOCKS, COLOR_MAP, V_COLOR_MAP\n",
     "\n",
     "# sklearn imports\n",
     "from sklearn.decomposition import PCA  # Principal Component Analysis\n",
@@ -93,23 +93,6 @@
     "\n",
     "from sklearn.metrics.cluster import rand_score\n",
     "from collections import defaultdict\n",
-    "\n",
-    "\n",
-    "COLOR_MAP = {\n",
-    "    \"audio_hvha\": \"red\",\n",
-    "    \"audio_hvla\": \"magenta\",\n",
-    "    \"audio_nvha\": \"green\",\n",
-    "    \"audio_nvla\": \"olive\",\n",
-    "}\n",
-    "V_COLOR_MAP = {\n",
-    "    \"hvha\": \"red\",\n",
-    "    \"hvla\": \"magenta\",\n",
-    "    \"nvha\": \"green\",\n",
-    "    \"nvla\": \"olive\",\n",
-    "    \"lvha\": \"blue\",\n",
-    "    \"lvla\": \"steelblue\",\n",
-    "}\n",
-    "\n",
     "\n",
     "def get_filter_pattern(feature: str = \"ALL\", channel: str = \"\") -> str:\n",
     "    prefix = \"\"\n",
