--- a/analysis/cebra.ipynb
+++ b/analysis/cebra.ipynb
@@ -31,22 +31,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import importlib\n",
-    "# import labels\n",
-    "# importlib.reload(labels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from data_utils import (\n",
     "    load_data_from_dir,\n",
     ")\n",
     "\n",
-    "subject_list = [2001, 2003, 2017, 2026, 2028, 2033,  2037, 2041]\n",
+    "subject_list = [2017] #, 2017, 2026, 2028, 2033,  2037, 2041\n",
     "subj_to_data = {}\n",
     "data_dir = '../CleandDataV2/'\n",
     "for subj in subject_list:\n",
@@ -61,73 +50,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from features.psd import welch_bandpower\n",
+    "from features.psd import get_psd_by_channel\n",
+    "from features.time_series import (\n",
+    "    get_block_time_series_features,\n",
+    ")\n",
+    "from labels import get_raw_labels\n",
     "from feature_extraction import EEG_BANDS, Feature\n",
-    "\n",
-    "\n",
-    "def get_psd(trial_data, srate, band):\n",
-    "    low, high = band\n",
-    "    freqs, psd = welch_bandpower(trial_data, srate, None, 2)\n",
-    "\n",
-    "    # Find closest indices of band in frequency vector\n",
-    "    idx_band = np.logical_and(freqs >= low, freqs <= high)\n",
-    "\n",
-    "    return psd[idx_band]\n",
-    "\n",
-    "\n",
-    "def get_psd_by_channel(block_data, marker, channel_type: str, feature: Feature):\n",
-    "    psd_data = []\n",
-    "    time_series_data = block_data.get_all_data()[marker]\n",
-    "\n",
-    "    # loop through all trials: time -> frequency\n",
-    "    for t in range(time_series_data.shape[2]):\n",
-    "        all_channel_psd = []\n",
-    "        for i, c in enumerate(block_data.get_chanlocs(marker)):\n",
-    "            if not c.startswith(channel_type):\n",
-    "                continue\n",
-    "\n",
-    "            data = time_series_data[i]\n",
-    "            psd = get_psd(data[:, t], block_data.get_srate(marker), EEG_BANDS[feature])\n",
-    "            all_channel_psd = (\n",
-    "                np.hstack((all_channel_psd, psd)) if len(all_channel_psd) > 0 else psd\n",
-    "            )\n",
-    "\n",
-    "        psd_data = (\n",
-    "            np.vstack((psd_data, all_channel_psd))\n",
-    "            if len(psd_data) > 0\n",
-    "            else all_channel_psd\n",
-    "        )\n",
-    "\n",
-    "    return psd_data\n",
-    "\n",
-    "\n",
-    "def get_time_series_data_by_channel(block_data, marker, channel_type: str):\n",
-    "    channel_data = []\n",
-    "    time_series_data = block_data.get_all_data()[marker]\n",
-    "\n",
-    "    # loop through all trials: time\n",
-    "    for t in range(time_series_data.shape[2]):\n",
-    "        all_channel_data = []\n",
-    "        for i, c in enumerate(block_data.get_chanlocs(marker)):\n",
-    "            if not c.startswith(channel_type):\n",
-    "                continue\n",
-    "            # data is in the shape of (12288, 13)\n",
-    "            data = np.array(time_series_data[i][:, t])\n",
-    "            all_channel_data = (\n",
-    "                np.vstack((all_channel_data, data))\n",
-    "                if len(all_channel_data) > 0\n",
-    "                else data\n",
-    "            )\n",
-    "\n",
-    "        all_channel_data = np.swapaxes(all_channel_data, 0, -1)\n",
-    "\n",
-    "        channel_data = (\n",
-    "            np.vstack((channel_data, all_channel_data))\n",
-    "            if len(channel_data) > 0\n",
-    "            else all_channel_data\n",
-    "        )\n",
-    "\n",
-    "    return channel_data\n",
     "\n",
     "\n",
     "def get_block_features(blocks, subject_data, marker, channel, feature):\n",
@@ -154,41 +82,7 @@
     "        ]\n",
     "        behavioral_labels.extend(labels)\n",
     "\n",
-    "    return behavioral_labels\n",
-    "\n",
-    "\n",
-    "def get_raw_labels(blocks, subject_data):\n",
-    "    v_labels = []\n",
-    "    a_labels = []\n",
-    "\n",
-    "    for b in blocks:\n",
-    "        block_data = subject_data[b]\n",
-    "\n",
-    "        v_labels.extend(block_data.get_labels().flatten())\n",
-    "        a_labels.extend(block_data.get_labels(\"arousal\").flatten())\n",
-    "\n",
-    "    return v_labels, a_labels\n",
-    "\n",
-    "\n",
-    "def get_block_time_series_features(blocks, subject_data, marker, channel):\n",
-    "    raw_data = []\n",
-    "    behavioral_labels = []\n",
-    "\n",
-    "    for b in blocks:\n",
-    "        block_data = subject_data[b]\n",
-    "        psd_data = get_time_series_data_by_channel(block_data, marker, channel)\n",
-    "\n",
-    "        v_label = block_data.get_labels()\n",
-    "        a_label = block_data.get_labels(\"arousal\")\n",
-    "        # (TODO) extend the labels to match the time series dimention\n",
-    "        labels = [\n",
-    "            get_behavioral_labels(v_label[i], a_label[i]) for i in range(len(v_label))\n",
-    "        ]\n",
-    "        behavioral_labels.extend(labels)\n",
-    "\n",
-    "        raw_data = np.vstack((psd_data, raw_data)) if len(raw_data) > 0 else psd_data\n",
-    "\n",
-    "    return raw_data, behavioral_labels"
+    "    return behavioral_labels"
    ]
   },
   {
@@ -223,9 +117,43 @@
     "            )\n",
     "            channel_feature_to_data[c][f] = raw_data\n",
     "\n",
-    "    valence_labels, arousal_labels = get_raw_labels(AUDIO_BLOCKS, subject_data)\n",
+    "    valence_labels, arousal_labels, attention_labels = get_raw_labels(AUDIO_BLOCKS, subject_data)\n",
     "    behavioral_labels = get_categorical_labels(AUDIO_BLOCKS, subject_data)\n",
     "    print(valence_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_series_data = subject_data['audio_hvha'].get_all_data()['EEG']\n",
+    "block_data = subject_data['audio_hvha']\n",
+    "marker = 'EEG'\n",
+    "channel_type = 'C'\n",
+    "\n",
+    "channel_data = []\n",
+    "for t in range(time_series_data.shape[2]):\n",
+    "    all_channel_data = []\n",
+    "    for i, c in enumerate(block_data.get_chanlocs(marker)):\n",
+    "        if not c.startswith(channel_type):\n",
+    "            continue\n",
+    "        # data is in the shape of (12288, 13)\n",
+    "        data = np.array(time_series_data[i][:, t])\n",
+    "        all_channel_data = (\n",
+    "            np.vstack((all_channel_data, data))\n",
+    "            if len(all_channel_data) > 0\n",
+    "            else data\n",
+    "        )\n",
+    "\n",
+    "    all_channel_data = np.swapaxes(all_channel_data, 0, -1)\n",
+    "    channel_data.append(all_channel_data)\n",
+    "#(trial, time, features/channels)    \n",
+    "channel_data = np.array(channel_data)\n",
+    "INPUT_SIZE = channel_data.shape[-1]\n",
+    "\n",
+    "channel_data.shape"
    ]
   },
   {
@@ -346,10 +274,10 @@
     "    output_dim = 16\n",
     "    max_hidden_units = 256\n",
     "    single_cebra_model = model_fit(\n",
-    "        neural_data, output_dim, max_hidden_units, None, 150, 150\n",
+    "        data, output_dim, max_hidden_units, None, 150, 150\n",
     "    )\n",
     "    loss_data[channel] = single_cebra_model.state_dict_[\"loss\"]\n",
-    "    embedding = single_cebra_model.transform(neural_data)\n",
+    "    embedding = single_cebra_model.transform(data)\n",
     "\n",
     "    ax = cebra.plot_embedding(\n",
     "        embedding,\n",
@@ -415,6 +343,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
+    "\n",
+    "\n",
+    "def upsample_by_attention(attention, num_output):\n",
+    "    from sklearn.preprocessing import MinMaxScaler\n",
+    "    import random\n",
+    "\n",
+    "    scaler = MinMaxScaler(feature_range=(0, 100))\n",
+    "    weights = scaler.fit_transform(attention.reshape(-1, 1))\n",
+    "\n",
+    "    random.seed(33)\n",
+    "    resampled_features = random.choices(\n",
+    "        np.arange(0, len(attention), 1), weights=weights, k=num_output\n",
+    "    )\n",
+    "\n",
+    "    return np.array(resampled_features)\n",
+    "\n",
+    "\n",
     "IDX_MAP = {\n",
     "    \"hvha\": 0,\n",
     "    \"hvla\": 1,\n",
@@ -425,7 +371,6 @@
     "}\n",
     "\n",
     "label_type = label_selector.value\n",
-    "cmap = [V_COLOR_MAP[l] for l in behavioral_labels]\n",
     "\n",
     "if label_type == \"valence\":\n",
     "    labels = valence_labels\n",
@@ -435,11 +380,31 @@
     "    labels = [IDX_MAP[l] for l in behavioral_labels]\n",
     "\n",
     "loss_data = {\"A\": {}, \"B\": {}, \"C\": {}, \"D\": {}}\n",
+    "r2_score_data = {\"A\": {}, \"B\": {}, \"C\": {}, \"D\": {}}\n",
+    "\n",
+    "validation_list = [10, 11, 12, 23, 24, 25, 36, 37, 38, 49, 50, 51]\n",
+    "train_list = [i for i in range(len(valence_labels)) if i not in validation_list]\n",
+    "\n",
+    "train_attention_labels = np.array(attention_labels)[train_list]\n",
+    "resampled_list = upsample_by_attention(train_attention_labels, 52 * 4)\n",
+    "train_labels = np.array(labels)[train_list][resampled_list]\n",
+    "\n",
+    "validation_labels = np.array(labels)[validation_list]\n",
+    "cmap = [V_COLOR_MAP[l] for l in np.array(behavioral_labels)[train_list][resampled_list]]\n",
+    "\n",
+    "threshold = 0.5 if label_type == \"arousal\" else 0.6\n",
+    "train_true_cat = [0 if p < threshold else 1 for p in train_labels]\n",
+    "val_true_cat = [0 if p < threshold else 1 for p in validation_labels]\n",
+    "\n",
     "for channel, feature_to_data in channel_feature_to_data.items():\n",
+    "    if len(feature_to_data) == 0:\n",
+    "        continue\n",
+    "\n",
     "    nrows = 2\n",
     "    ncols = int(len(feature_to_data) / 2)\n",
     "    fig, axes = plt.subplots(\n",
     "        nrows=2,\n",
+    "        sharey=True,\n",
     "        ncols=ncols,\n",
     "        figsize=(ncols * 5, nrows * 5),\n",
     "        subplot_kw=dict(projection=\"3d\"),\n",
@@ -450,13 +415,15 @@
     "    max_hidden_units = 256\n",
     "\n",
     "    for f, neural_data in feature_to_data.items():\n",
+    "        train_data = neural_data[train_list][resampled_list]\n",
+    "\n",
     "        single_cebra_model = model_fit(\n",
-    "            neural_data, output_dim, max_hidden_units, np.array(labels)\n",
+    "            train_data, output_dim, max_hidden_units, train_labels\n",
     "        )\n",
     "        loss_data[channel][f.name] = single_cebra_model.state_dict_[\"loss\"]\n",
     "\n",
-    "        # plot embedding\n",
-    "        embedding = single_cebra_model.transform(neural_data)\n",
+    "        # 3. Calculate embedding\n",
+    "        embedding = single_cebra_model.transform(train_data)\n",
     "        ax = cebra.plot_embedding(\n",
     "            embedding,\n",
     "            embedding_labels=np.array(cmap),\n",
@@ -483,7 +450,7 @@
     "        fontsize=15,\n",
     "    )\n",
     "\n",
-    "    plt.savefig(f\"results/cebra/{label_type}_{subj}_eeg_bands_channel_{channel}_O{output_dim}H{max_hidden_units}.png\")"
+    "    # plt.savefig(f\"results/cebra/{label_type}_{subj}_eeg_bands_channel_{channel}_O{output_dim}H{max_hidden_units}.png\")"
    ]
   },
   {
@@ -512,7 +479,7 @@
     "    ax.set_title('channel:' + c)\n",
     "    ax.set_ylabel('InfoNCE Loss')\n",
     "    ax.set_xlabel('Steps')\n",
-    "plt.savefig(f\"results/cebra/{label_type}_{subj}_eeg_bands_channel_loss_{channel}_O{output_dim}H{max_hidden_units}.png\")"
+    "#plt.savefig(f\"results/cebra/{label_type}_{subj}_eeg_bands_channel_loss_{channel}_O{output_dim}H{max_hidden_units}.png\")"
    ]
   },
   {
